--- a/bootstrap/argocd/kustomization.yaml
+++ b/bootstrap/argocd/kustomization.yaml
@@ -1,11 +1,11 @@
+apiVersion: kustomize.config.k8s.io/v1beta1
+kind: Kustomization
 # additional resources like ingress rules, cluster and repository secrets.
 resources:
-- github.com/argoproj/argo-cd//manifests/cluster-install?ref=v2.9.3
+- https://github.com/argoproj/argo-cd//manifests/cluster-install?ref=v2.9.3
 #- clusters-secrets.yaml
 #- repos-secrets.yaml
 - settings/repositories.yaml
-
-# changes to config maps
-patches:
-- path: settings/argocd-cm.yaml
-- path: settings/argocd-rbac-cm.yaml
+patchesStrategicMerge:
+- settings/argocd-cm.yaml
+- settings/argocd-rbac-cm.yaml
