--- a/addons/argocd/settings/ingress.yaml
+++ b/addons/argocd/settings/ingress.yaml
@@ -2,6 +2,10 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: argocd-server
+  annotations:
+    #cert-manager.io/cluster-issuer: letsencrypt-production
+    nginx.ingress.kubernetes.io/use-regex: "true"
+    nginx.ingress.kubernetes.io/temporal-redirect: https://sandman01.k8s.local$request_uri
 spec:
   ingressClassName: public
   rules:
