--- a/addons/argocd/settings/ingress.yaml
+++ b/addons/argocd/settings/ingress.yaml
@@ -5,7 +5,9 @@ metadata:
   annotations:
     #cert-manager.io/cluster-issuer: letsencrypt-production
     nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/temporal-redirect: https://argocd.sandman01.k8s.local$request_uri
+    nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
 spec:
   ingressClassName: public
   rules:
