--- a/addons/argocd/settings/ingress.yaml
+++ b/addons/argocd/settings/ingress.yaml
@@ -4,10 +4,11 @@ metadata:
   name: argocd-server
   annotations:
     #cert-manager.io/cluster-issuer: letsencrypt-production
-    nginx.ingress.kubernetes.io/use-regex: "true"
-    nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "false"
-    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/configuration-snippet: |
+      if ($http_x_forwarded_proto = 'http') {
+        return 301 https://$host$request_uri;
+      }
 spec:
   ingressClassName: public
   rules:
